--- a/index.html
+++ b/index.html
@@ -7,7 +7,49 @@
   <link rel="stylesheet" href="styles.css">
   <title>Vanilla JavaScript App</title>
 </head>
+<input type="checkbox" class="checkbox" id ="check">
+	<label class="menu" for="check"><img src="ico/bar.png"></label>
+	<div class="left-panel">
+	<ul>
+		<a href="#" onclick="dash();"><li><img src="ico/155-pie-chart.png"> Dashboard</li></a>
+		<li><h1>Nómina</h1></li>
+		<a href="#" onclick="hc();"><li><img src="ico/115-users.png"> Head-Count</li></a>
+		<a href="#" onclick="disper();"><li><img src="ico/175-briefcase.png"> Dispersión de Gasto</li></a>
+		<a href="#" onclick="valid();"><li><img src="ico/273-checkmark.png"> Validación de Nómina</li></a>
+		<a href="#" onclick="gasto();"><li><img src="ico/017-headphones.png"> Gasto por Agente</li></a>
+	</ul>
+	</div>
+<!--Comienza Codigo para Dashboard------------------------------------------------------------------------------------------------------>
+	<div id="dashboard" class="dashboard">
+		<h1>Pagina para colocar el dashboard</h1>
+	</div>
+<!--Finaliza Codigo para Dashboard------------------------------------------------------------------------------------------------------>	
 
+<!--Comienza Codigo para Validacion HC-------------------------------------------------------------------------------------------------->
+	<div id="headcount" class="contenido">
+		<h1>Pagina para colocar la validacion de Head-Count</h1>
+	</div>
+<!--Finaliza Codigo para Validacion HC-------------------------------------------------------------------------------------------------->
+
+<!--Comienza Codigo para Dispersion----------------------------------------------------------------------------------------------------->
+	<div id="dispersion" class="contenido">
+		<h1>Pagina para colocar la Dispersion de Gasto</h1>
+	</div>
+<!--Finaliza Codigo para Dispersion----------------------------------------------------------------------------------------------------->
+
+<!--Comienza Codigo para Validacion de Nomina------------------------------------------------------------------------------------------->
+	<div id="validacion" class="contenido">
+		<h1>Pagina para colocar la Validacion de Nómina</h1>
+	</div>
+<!--Finaliza Codigo para Validacion de Nomina------------------------------------------------------------------------------------------->
+
+<!--Comienza Codigo para Gasto por Agente----------------------------------------------------------------------------------------------->
+	<div id="gastoagente" class="contenido">
+		<h1>Pagina para colocar el Gasto por Agente</h1>
+	</div>
+<!--Finaliza Codigo para Gasto por Agente----------------------------------------------------------------------------------------------->
+
+	<script type="text/javascript" src="js/secciones.js"></script>
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
