--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+	<link href="all.css" rel="stylesheet">
   <title>Vanilla JavaScript App</title>
 </head>
 <input type="checkbox" class="checkbox" id ="check">
@@ -49,7 +50,7 @@
 	</div>
 <!--Finaliza Codigo para Gasto por Agente----------------------------------------------------------------------------------------------->
 
-	<script type="text/javascript" src="js/secciones.js"></script>
+	<script type="text/javascript" src="secciones.js"></script>
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
