--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <title>Vanilla JavaScript App</title>
 </head>
 <input type="checkbox" class="checkbox" id ="check">
-	<label class="menu" for="check"><img src="ico/bar.png"></label>
+	<label class="menu" for="check"><img src="bar.png"></label>
 	<div class="left-panel">
 	<ul>
 		<a href="#" onclick="dash();"><li><img src="ico/155-pie-chart.png"> Dashboard</li></a>
 		<li><h1>Nómina</h1></li>
-		<a href="#" onclick="hc();"><li><img src="ico/115-users.png"> Head-Count</li></a>
-		<a href="#" onclick="disper();"><li><img src="ico/175-briefcase.png"> Dispersión de Gasto</li></a>
-		<a href="#" onclick="valid();"><li><img src="ico/273-checkmark.png"> Validación de Nómina</li></a>
-		<a href="#" onclick="gasto();"><li><img src="ico/017-headphones.png"> Gasto por Agente</li></a>
+		<a href="#" onclick="hc();"><li><i class="fas fa-users"></i> Head-Count</li></a>
+		<a href="#" onclick="disper();"><li><i class="fas fa-wallet"></i> Dispersión de Gasto</li></a>
+		<a href="#" onclick="valid();"><li><i class="fas fa-check"></i> Validación de Nómina</li></a>
+		<a href="#" onclick="gasto();"><li><i class="fas fa-headphones-alt"></i> Gasto por Agente</li></a>
 	</ul>
 	</div>
 <!--Comienza Codigo para Dashboard------------------------------------------------------------------------------------------------------>
