--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<label class="menu" for="check"><img src="bar.png"></label>
 	<div class="left-panel">
 	<ul>
-		<a href="#" onclick="dash();"><li><img src="ico/155-pie-chart.png"> Dashboard</li></a>
+		<a href="#" onclick="dash();"><li><i class="fas fa-userschart-pie"></i> Dashboard</li></a>
 		<li><h1>Nómina</h1></li>
 		<a href="#" onclick="hc();"><li><i class="fas fa-users"></i> Head-Count</li></a>
 		<a href="#" onclick="disper();"><li><i class="fas fa-wallet"></i> Dispersión de Gasto</li></a>
